Adding button. Adding method to hide button on click. Fixing styling.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 		<!-- Main
 		========================================== -->
 		<main>
-			<div class="time">
-				<p>Time Remaining:</p>
-				<p id="#timer"></p>
+			<div id="start">
+				<button class="button">Start</button>
+			</div>
+			<div id="timer">
 			</div>
 			<div class="questions">
 			</div>
