--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 
 		<!-- Main
 		========================================== -->
-		<main>
+		<main id="main">
 			<div id="start">
 				<button class="button">Start</button>
 			</div>
 			<div id="timer">
 			</div>
 			<div id="questions">
+			</div>
+			<div id="done">
+				<button class="button">Done</button>
 			</div>
 		</main>
 
